--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,22 +4,23 @@ project:
 execute: 
   echo: false
 book: 
-  title: learning statistics with jamovi 
-  author: "Danielle J. Navarro & David R. Foxcroft"
-  date-meta: last-modified
+  title: 用jamovi上手統計學 
+  author: "原著: Danielle J. Navarro, David R. Foxcroft; 台灣正體中文翻譯:陳紹慶"
+#  translator: "(台灣正體中文)"
+#  date-meta: last-modified
   date-format: "D MMMM YYYY"
   doi: 10.24384/hgc3-7p15
   cover-image: images/bookcover_scaled.png
-  downloads: [pdf, epub]
+  #downloads: [pdf, epub]
   reader-mode: true
   sidebar:
     align: left
     collapse-level: 1
   page-footer:
     left: |
-      <a href="https://learnstatswithjamovi.com">learning statistics with jamovi</a>
+      <a href="https://learnstatswithjamovi.com">用jamovi上手統計學</a>
     right: |
-      This book was built with <a href="https://quarto.org/">Quarto</a> 
+      電子書使用 <a href="https://quarto.org/">Quarto</a> 創建
   site-url: "https://davidfoxcroft.github.io/lsj-book/"
   repo-url: "https://github.com/davidfoxcroft/lsj-book/"
   repo-actions: [edit,issue]
@@ -29,25 +30,25 @@ book:
   chapters: 
     - index.qmd
     - Preface.qmd
-    - part: Beginnings
+    - part: 新手須知
       chapters:
          - 01-Why-do-we-learn-statistics.qmd
          - 02-A-brief-introduction-to-research-design.qmd
-    - part: An introduction to jamovi
+    - part: jamovi初體驗
       chapters:
          - 03-Getting-started-with-jamovi.qmd
-    - part: Working with data
+    - part: 資料處理
       chapters:
          - 04-Descriptive-statistics.qmd
          - 05-Drawing-graphs.qmd
          - 06-Pragmatic-matters.qmd
-    - part: Statistical theory
+    - part: 統計理論
       chapters:
          - Prelude-Part-IV.qmd
          - 07-Introduction-to-probability.qmd
          - 08-Estimating-unknown-quantities-from-a-sample.qmd
          - 09-Hypothesis-testing.qmd
-    - part: Statistical tools
+    - part: 統計方法
       chapters:
          - 10-Categorical-data-analysis.qmd
          - 11-Comparing-two-means.qmd
@@ -55,7 +56,7 @@ book:
          - 13-Comparing-several-means-one-way-ANOVA.qmd
          - 14-Factorial-ANOVA.qmd
          - 15-Factor-Analysis.qmd
-    - part: Endings, alternatives and prospects
+    - part: 貝氏統計
       chapters:
          - 16-Bayesian-statistics.qmd
     - Epilogue.qmd
@@ -80,18 +81,14 @@ format:
     #reference-location: margin
   epub: 
    # footnotes not rendering math in popup but ok in mainview (issue with calibre viewer)
-    title: "learning statistics with jamovi (version 0.75)"
+    title: "用jamovi上手統計學 (version 0.75)"
     toc: true
-<<<<<<< HEAD
     css: styles.css
-=======
-    #css: styles.css
->>>>>>> 30d6647ddfaa8c97ba26fd91ef50c5ef91764944
     html-math-method: mathjax
     include-in-header: header-includes.html
     epub-cover-image: images/bookcover_html.png
   pdf:
-    title: "learning statistics with jamovi (version 0.75)"
+    title: "用jamovi上手統計學 (version 0.75)"
     documentclass: book
     geometry:
       - paperwidth=8.00in
