--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,7 @@ book:
   author: "原著: Danielle J. Navarro, David R. Foxcroft; 台灣正體中文翻譯:陳紹慶"
 #  translator: "(台灣正體中文)"
 #  date-meta: last-modified
-  date-format: "D MMMM YYYY"
+  date-format: "YYYY MMMM D"
   doi: 10.24384/hgc3-7p15
   cover-image: images/bookcover_scaled.png
   #downloads: [pdf, epub]
@@ -20,11 +20,11 @@ book:
     left: |
       <a href="https://learnstatswithjamovi.com">用jamovi上手統計學</a>
     right: |
-      電子書使用 <a href="https://quarto.org/">Quarto</a> 創建
+      電子書使用 <a href="https://quarto.org/">Quarto套件</a>創建
   site-url: "https://davidfoxcroft.github.io/lsj-book/"
   repo-url: "https://github.com/davidfoxcroft/lsj-book/"
   repo-actions: [edit,issue]
-  sharing: [twitter, facebook, linkedin]
+  sharing: [twitter, facebook]
   open-graph: true
   
   chapters: 
