--- a/_quarto.yml
+++ b/_quarto.yml
@@ -50,11 +50,12 @@ book:
          - 09-Hypothesis-testing.qmd
     - part: 統計方法
       chapters:
-         - 10-Categorical-data-analysis.qmd
+         - Prelude-Part-V.qmd
+         - 10-Correlation-and-linear-regression.qmd
          - 11-Comparing-two-means.qmd
-         - 12-Correlation-and-linear-regression.qmd
-         - 13-Comparing-several-means-one-way-ANOVA.qmd
-         - 14-Factorial-ANOVA.qmd
+         - 12-Comparing-several-means-one-way-ANOVA.qmd
+         - 13-Factorial-ANOVA.qmd
+         - 14-Categorical-data-analysis.qmd
          - 15-Factor-Analysis.qmd
     - part: 貝氏統計
       chapters:
