--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,3 +1,4 @@
+lang: zh
 project: 
   type: book
   output-dir: docs
@@ -59,11 +60,11 @@ book:
     - part: 統計方法
       chapters:
          - Prelude-Part-V.qmd
-         - 10-Correlation-and-linear-regression.qmd
+         - 10-Categorical-data-analysis.qmd
          - 11-Comparing-two-means.qmd
-         - 12-Comparing-several-means-one-way-ANOVA.qmd
-         - 13-Factorial-ANOVA.qmd
-         - 14-Categorical-data-analysis.qmd
+         - 12-Correlation-and-linear-regression.qmd
+         - 13-Comparing-several-means-one-way-ANOVA.qmd
+         - 14-Factorial-ANOVA.qmd
          - 15-Factor-Analysis.qmd
     - part: 貝氏統計
       chapters:
