--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,7 +13,10 @@ book:
   date-format: "YYYY MMMM D"
   doi: 10.24384/hgc3-7p15
   cover-image: images/bookcover_scaled.png
-  #downloads: [pdf, epub]
+  cookie-consent: false
+  page-navigation: true
+  search: true
+#downloads: [pdf, epub]
 #  title: learning statistics with jamovi 
 #  author: "Danielle J. Navarro & David R. Foxcroft"
   #date: last-modified
@@ -73,6 +76,7 @@ book:
     - References.qmd
   
 bibliography: refs.bib
+link-citations: true
 csl: apa.csl
 
 format:
