--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,7 +7,7 @@ execute:
   warning: false
 book: 
   title: 用jamovi上手統計學 
-  author: "原著: Danielle J. Navarro, David R. Foxcroft; 台灣繁體中文翻譯:陳紹慶、周傳斌"
+  author: "原著: Danielle J. Navarro, David R. Foxcroft; 台灣繁體中文翻譯:陳紹慶"
 #  translator: "(台灣正體中文)"
 #  date-meta: last-modified
   date-format: "YYYY MMMM D"
@@ -23,7 +23,7 @@ book:
 #  date-format: "D MMMM YYYY"
 #  doi: 10.24384/hgc3-7p15
 #  cover-image: images/bookcover_scaled.png
-  downloads: pdf
+#  downloads: pdf
   reader-mode: true
   sidebar:
     align: left
@@ -62,7 +62,7 @@ book:
          - 09-Hypothesis-testing.qmd
     - part: 統計方法
       chapters:
-         - Prelude-Part-V.qmd
+#         - Prelude-Part-V.qmd
          - 10-Categorical-data-analysis.qmd
          - 11-Comparing-two-means.qmd
          - 12-Correlation-and-linear-regression.qmd
